--- a/scss/overlay-loader/_component.scss
+++ b/scss/overlay-loader/_component.scss
@@ -22,15 +22,6 @@
         max-width: 80vw;
     }
 
-    .loader-message {
-        margin-top: 2rem;
-        text-align: center;
-
-        span {
-            display: block;
-        }
-    }
-
 
     // while the overlay that blocks the UI is there immediately, only show the
     // spinner + background after 250ms, so that the UI doesn't flash hectically.
@@ -42,6 +33,18 @@
         .loader {
             opacity: 1;
             transition-delay: $delay;
+        }
+    }
+}
+
+
+.loader {
+    .loader-message {
+        margin-top: 2rem;
+        text-align: center;
+
+        span {
+            display: block;
         }
     }
 }
